# Digraph

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.txt
.github/workflows/: build.yml  release.yml
example_graphs/: example1.json  example2.json
src/: CMakeLists.txt  SIMDMatrix.cpp  SIMDMatrix.h  main.cpp  pch.h
test/: CMakeLists.txt  matlib_pch.h  test_matrix.cpp
